[TASK] renamed metric from sentry_project_open_issues to sentry_open_issue_events [FEATURE] added some more label values [TASK] added ext-json to requirements list

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "openmetrics-php/exposition-text": "^0.3.1",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
